--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-
+<div class="jumbotron">
 <h1>Welcome to my page</h1>
-<p>Sign up <%= link_to "here", about_path %>.</p>
+<p>Sign up <%= link_to "here", about_path,  class: "btn btn-danger btn-lg" %>.</p>
