--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,5 +1,21 @@
-$body-bg: rgb(52, 73, 94);
-$navbar-default-bg: rgb(26, 188, 156);
-$navbar-default-link-color: white;
-$jumbotron-bg: #e67e22;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
+
+$body-bg:                          #ecf0f1;
+$font-family-sans-serif:           'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height:                    45px;
+$navbar-default-bg:                white;
+$navbar-default-brand-color:       #c0392b;
+$brand-primary:                    #c0392b;
+$jumbotron-bg:                     white;
+
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+.center {
+     text-align: center;
+}
+
+.navbar-brand {
+     font-weight: bold;
+}
 @import 'bootstrap';
