--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<div class="jumbotron">
-<h1>Welcome to my page</h1>
-<p>Sign up <%= link_to "here", about_path,  class: "btn btn-danger btn-lg" %>.</p>
+<div class="jumbotron center">
+     <h1>Welcome to my app!</h1>
+     <p>
+       <%= link_to "Log in", "#", class: "btn btn-default btn-lg" %>
+       <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %>
+  </p>    
+</div>
+
